# whisper64

./: CMakeLists.txt  README.md  run_vice.sh  whisper64.c
include/: basic.h  clipboard.h  editor.h  editor_state.h  file_ops.h  font_4x8.h  goto.h  help.h  mouse.h  reu.h  screen.h  screen80.h  search.h  undo.h  whisper64.h
src/: basic.c  clipboard.c  editor.c  editor_state.c  file_ops.c  goto.c  help.c  main.c  mouse.c  reu.c  screen.c  screen80.c  search.c  undo.c
